--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,13 @@
   --color-dairy: #fcfcfc;
 }
 
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   font-family: "Roboto", sans-serif;
@@ -101,9 +108,21 @@ body {
 }
 
 .section-one-background {
-  background-color: var(--color-navyblue);
-  padding-top: 188px;
-  padding-bottom: 188px;
+  background-color: var(--navyblue);
+  padding: 188px 0;
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("/images/office.jpg");
+  margin: auto;
 }
 
 .order-service-button {
@@ -365,6 +384,7 @@ body {
 
 .text-ourteam {
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .footer-container {
@@ -408,4 +428,130 @@ img {
   padding: 32px 16px;
   border: 1px solid var(--color-cornflower);
   border-top: none;
+}
+
+.icons-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: var(--color-cloud);
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+.svgs {
+  fill: var(--color-cloud);
+}
+
+.logos-people {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
+.logos-people-icons {
+  width: 40px;
+  height: 40px;
+}
+
+.logos-people-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logos-people-link:hover,
+.logos-people-link:focus {
+  background-color: var(--color-ocean);
+}
+
+.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.customers-header {
+  font-size: 36px;
+  line-height: 1.11;
+  color: var(--color-navyblue);
+  margin-bottom: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.customers-list {
+  display: flex;
+  gap: 24px;
+}
+
+.customers-inside {
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+
+.customers-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--color-lightslate);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-lightslate);
+}
+
+.customers-icons {
+  fill: currentColor;
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  border-color: var(--color-ocean);
+  color: var(--color-ocean);
+}
+.footer {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-position {
+  margin-right: 120px;
+}
+.socials-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+  margin-bottom: 16px;
+}
+.socials-list {
+  display: flex;
+  gap: 16px;
+}
+.socials-icons {
+  height: 40px;
+  width: 40px;
+}
+.socials-link {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-iris);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.socials-link:hover,
+.socials-link:focus {
+  background-color: var(--color-green);
+}
+
+.socials-icons-display {
+  fill: var(--color-cloud);
 }
