--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,8 @@ body {
 }
 
 .header-backround {
-  background: var(--color-white);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   border-bottom: 1px solid var(--color-cornflower);
 }
 
@@ -527,7 +528,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--white);
+  color: var(--color-white);
   margin-bottom: 16px;
 }
 .socials-list {
